k8s/dev/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy
  #namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: gateway
      port: 
        name: gateway
  rules:
    - host: app.dev
    - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: gateway
            port:
              name: gateway
       - path: /users
         pathType: Prefix
         backend:
          service:
            name: gateway
            port:
              name: gateway
       - path: /auth/health
         pathType: Prefix
         backend:
          service:
            name: gateway
            port:
              name: gateway
